--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Curso de Análisis de Redes Sociales (en RStudio)
+description: Universidad Sergio Arboleda, Sept. 2021
